# Lelong

./: README.md  main.py  order.py  pyproject.toml  replit.nix  replit_zip_error_log (1).txt  replit_zip_error_log.txt  requirements.txt
csv/: bids_rows.csv  products.db  products_rows.csv  readdata.py  test_bids.db  users_rows.csv
databases/: admin.db  bids.db  products.db  users.db
static/JS/: slider.home.js  wishlist.js
static/css/animation/: animation.css
static/css/home/: about.css  base.css  cart.css  contact.css  home.css  login.css  ordertracking.css  product.css  wishlist.css
templates/admin/: addProducts.html  allOrders.html  base.html  contacts.html  displayBids.html  displayProducts.html  home.html  listProducts.html  login.html  lowAdmin.html  orderid.html  ordertrack.html  resetPass.html
templates/components/header/: header.html
templates/users/: 404.html  about.html  base.html  bids.html  cart.html  contact.html  home.html  login.html  ordertracking.html  product.html  products.html  success.html  wishlist.html
