[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
bson = "^0.5.10"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
flask-sslify = "^0.1.5"
pymongo = "^4.6.1"
stripe = "^7.9.0"
utils = "^1.0.1"
supabase = "2.3.0"
cryptography = "^41.0.7"
git-python = "^1.0.3"
bcrypt = "^4.1.2"
markupsafe = "^2.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"